fixed table alignment in accordion

--- a/Portals/_default/Skins/AgapeFR/Intranet.css
+++ b/Portals/_default/Skins/AgapeFR/Intranet.css
@@ -18,7 +18,3 @@
 #ContentContainer #ContentTitle {
     margin: 5px 0 0 30px;
 }
-
-.accordion-heading .accordion-toggle {
-    padding: 0px 15px;
-}
